<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter the name for a crime</string>
    <string name="name_title">Title</string>
    <string name="date_title">Date</string>
    <string name="details_title">Details</string>
    <string name="solved_title">Solved</string>
    <string name="crimes_title">Crime List</string>
    <string name="datapick_title">Choose date</string>
    <string name="new_crime">New Crime</string>
    <string name="delete_crime">Delete</string>
    <string name="take">Take</string>
    <string name="Suspect">Suspect</string>
    <string name="SendMessage">Send</string>
    <string name="send_report">Send Report</string>
    <string name="suspect">Suspect</string>
</resources>
