<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
            <ImageView android:id="@+id/photo"
                       android:layout_width="80dp"
                       android:layout_height="80dp"
                       android:scaleType="centerInside"
                       android:background="@android:color/darker_gray"
                       android:cropToPadding="true"
                    />
            <ImageButton android:id="@+id/take_photo_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>
        <LinearLayout android:orientation="vertical"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/name_title"
                      style="?android:listSeparatorTextViewStyle"/>
            <EditText android:id="@+id/crime_title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp"
                      android:hint="@string/crime_title_hint"/>
        </LinearLayout>


    </LinearLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/details_title"
              style="?android:listSeparatorTextViewStyle"/>
    <Button android:id="@+id/datetime_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />
    <CheckBox android:id="@+id/solved_checkbox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:text="@string/solved_title"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="16dp"
                  android:layout_marginRight="16dp"
                  android:orientation="horizontal">
        <Button android:id="@+id/suspect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Suspect"/>
        <Button android:id="@+id/sendmessage_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SendMessage"/>
    </LinearLayout>


</LinearLayout>